@@ -4,7 +4,7 @@ dnl Process this file with autoconf to make a configure script
 dnl
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(celestia, 1.2.1)
+AM_INIT_AUTOMAKE(celestia, 1.2.4)
 AM_CONFIG_HEADER(config.h)
 
 AM_ACLOCAL_INCLUDE(macros)
